--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -16,12 +16,14 @@ categories = ["cryptography", "operating-systems"]
 license = "Apache-2.0"
 edition = "2021"
 
+[lib]
+path = "src/lib.rs"
+
 [features]
 default = ["snarkos-node/metrics"]
 
 [dependencies.aleo-std]
-version = "0.1.24"
-default-features = false
+workspace = true
 
 [dependencies.anstyle]
 version = "1"
