--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,8 +52,8 @@ rev = "04cde5c03"
 # path = "../snarkVM"
 features = ["circuit", "console", "rocks"]
 
-[lib]
-path = "snarkos/lib.rs"
+# [lib]
+# path = "snarkos/lib.rs"
 
 [[bin]]
 name = "snarkos"
