--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,9 +55,9 @@ features = ["circuit", "console", "rocks"]
 [lib]
 path = "snarkos/lib.rs"
 
-[[bin]]
-name = "snarkos"
-path = "snarkos/main.rs"
+# [[bin]]
+# name = "snarkos"
+# path = "snarkos/main.rs"
 
 [features]
 jemalloc = ["tikv-jemallocator"]
