--- a/sphinx/Cargo.toml
+++ b/sphinx/Cargo.toml
@@ -16,6 +16,9 @@ categories = ["cryptography", "operating-systems"]
 license = "Apache-2.0"
 edition = "2021"
 
+[lib]
+path = "src/lib.rs"
+
 
 [dependencies.anyhow]
 version = "1.0.79"
