--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,9 @@ rev = "04cde5c03"
 # path = "../snarkVM"
 features = ["circuit", "console", "rocks"]
 
+[lib]
+path = "snarkos/lib.rs"
+
 [[bin]]
 name = "snarkos"
 path = "snarkos/main.rs"
@@ -87,7 +90,6 @@ version = "=2.2.7"
 
 [dependencies.snarkos-sphinx]
 path = "./sphinx"
-version = "=2.2.7"
 
 [dependencies.snarkos-node]
 path = "./node"
