--- a/sphinx/Cargo.toml
+++ b/sphinx/Cargo.toml
@@ -2,7 +2,7 @@
 name = "snarkos-sphinx"
 version = "2.2.7"
 authors = ["The Aleo Team <hello@aleo.org>"]
-description = "A CLI for a decentralized operating system"
+description = "sphinx for a decentralized operating system"
 homepage = "https://aleo.org"
 repository = "https://github.com/AleoHQ/snarkOS"
 keywords = [
@@ -15,10 +15,6 @@ keywords = [
 categories = ["cryptography", "operating-systems"]
 license = "Apache-2.0"
 edition = "2021"
-
-[lib]
-path = "src/lib.rs"
-
 
 [dependencies.anyhow]
 version = "1.0.79"
